test: padroniza nomenclatura dos métodos